2014-05-21  John Marino  <gnugcc@marino.st>

	* runtime/os-unix.c (__DragonFly__): New target.

2014-04-11  Barry Tannenbaum  <barry.m.tannenbaum@intel.com>

	PR other/60644
	* runtime/os-unix.c: Replaced all occurrances of ANDROID with
	__ANDROID__.
	* runtime/bug.h: Likewise.
	* include/cilk/metaprogramming.h: Likewise.
	* include/cilk/reducer_min_max.h: Likewise.

2014-03-26  Tobias Burnus  <burnus@net-b.de>

	* libcilkrts.spec.in: New.
	* Makefile.am: Handle libcilkrts.spec.
	* configure.ac: Determine link options for libcilkrts.spec.
	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* aclocal.m4: Regenerate.

2014-03-20  Tobias Burnus  <burnus@net-b.de>

	PR other/60589

	Reverted:
	2014-03-09  Tobias Burnus  <burnus@net-b.de>

	* Makefile.am: Install cilk.h.
	* Makefile.in: Regenerate.
	* aclocal.m4: Regenerate.

2014-03-09  Tobias Burnus  <burnus@net-b.de>

	* Makefile.am: Install cilk.h.
	* Makefile.in: Regenerate.
	* aclocal.m4: Regenerate.

2014-02-18  Balaji V. Iyer  <balaji.v.iyer@intel.com>

	* include/cilk/common.h (__CILKRTS_ABI_VERSION): Set the ABI version
	to 1 instead of 0.
	* runtime/cilk-abi-cilk-for.cpp (cilk_for_recursive): Added a fix to
	initialize stack frame correctly.

2014-02-10  Balaji V. Iyer  <balaji.v.iyer@intel.com>

	PR target/59691
	* runtime/config/x86/os-unix-sysdep.c (__builtin_cpu_supports): New
	function.
	(restore_x86_fp_state): Added a check if the cpu supports the
	instruction before emitting it.
	(sysdep_save_fp_ctrl_state): Likewise.

2014-01-20  Balaji V. Iyer  <balaji.v.iyer@intel.com>

	PR other/58996
	* configure.ac: Added a check for pthread affinity support.
	* runtime/os-unix.c: Likewise.
	* configure: Regenerate.

2014-01-09  Balaji V. Iyer  <balaji.v.iyer@intel.com>

	bootstrap/59094
	* Makefile.am (cilkincludedir): Fixed a bug to store version-specific
	runtime libraries in the correct place.
	* Makefile.in: Regenerate.

2013-12-13  Balaji V. Iyer  <balaji.v.iyer@intel.com>
